tests/ui/assoc-lang-items.stderr
error[E0522]: definition of an unknown language item: `dummy_lang_item_1`
  --> $DIR/assoc-lang-items.rs:4:5
   |
LL |     #[lang = "dummy_lang_item_1"]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ definition of unknown language item `dummy_lang_item_1`

error[E0522]: definition of an unknown language item: `dummy_lang_item_2`
  --> $DIR/assoc-lang-items.rs:7:5
   |
LL |     #[lang = "dummy_lang_item_2"]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ definition of unknown language item `dummy_lang_item_2`

error[E0522]: definition of an unknown language item: `dummy_lang_item_3`
  --> $DIR/assoc-lang-items.rs:10:5
   |
LL |     #[lang = "dummy_lang_item_3"]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ definition of unknown language item `dummy_lang_item_3`

error[E0522]: definition of an unknown language item: `dummy_lang_item_4`
  --> $DIR/assoc-lang-items.rs:17:5
   |
LL |     #[lang = "dummy_lang_item_4"]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ definition of unknown language item `dummy_lang_item_4`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0522`.
